--- a/part_2/index.html
+++ b/part_2/index.html
@@ -14,7 +14,7 @@
             <button id="signup">Sign up</button>
         </h1>
         <div>
-            <input type="text" placeholder="username">
+            <input type="text" placeholder="username" id="name" name="name" autocomplete="name">
             <input type="password" placeholder="password">
         </div>
         <nav>
@@ -77,11 +77,16 @@
     </div>
     </main>
     <div id="myId">
-        <p>This is a paragraph</p>
-        <input type="radio" id="yes" name="agree">
+        <p class="paraDetails">
+            This is a paragraph<br>
+            This is para 2
+        </p>
+        <input type="radio" id="yes" name="agree" checked>
         <label for="yes">Yes</label>
         <input type="radio" id="no" name="agree">
         <label for="no">No</label>
+        <input type="radio" id="other" name="agree" disabled>
+        <label for="other">Other</label>
     </div>
   </body>
 </html>
