display,transform and other property updated in readme and part_3 & part_4 also added

--- a/part_3/index.html
+++ b/part_3/index.html
@@ -26,5 +26,10 @@
       curtail'd of this fair proportion,
     </div>
     <button>Click me</button>
+    <div id="outer">This is outer
+    <div id="inner">This is inner
+        <div id="last">This is last div</div>
+    </div>
+    </div>
   </body>
 </html>
