--- a/part_4/index.html
+++ b/part_4/index.html
@@ -9,6 +9,30 @@
 <body>
     <div class="animation">animation</div>
         <div id="one">box</div>
-    
+    <div class="card">
+        <img src="man.jpg" alt="man">
+        <h3>Mr X</h3>
+        <h3>Software developer</h3>
+    </div>
+    <div class="card">
+        <img src="woman.jpg" alt="woman">
+        <h3>Mrs Y</h3>
+        <h3>Software Quality Assurance</h3>
+    </div>
+    <section>
+        <h2>Position Static Demo</h2>
+        <div class="position"></div>
+        <div id="position_static" class="position"></div>
+    </section>
+    <section>
+        <h2>Position Relative Demo</h2>
+        <div class="position"></div>
+        <div id="position_relative" class="position"></div>
+    </section>
+    <section>
+        <h2>Position Absolute Demo</h2>
+        <div class="position"></div>
+        <div id="position_absolute" class="position"></div>
+    </section>
 </body>
 </html>
