CSS Grid, Animation description updated in readme and part_6 added with animation and grid examples

--- a/part_6/index.html
+++ b/part_6/index.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Grid PlayGround</h1>
     <div class="divContainer">
-        <div class="item">1</div>
+        <div class="item" id="one">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="item" id="four">4</div>
         <div class="item">5</div>
     </div>
+    <div id="fontAnimation">font animation</div>
 </body>
 </html>
