z-index description and examples added in README and part_6

--- a/part_6/index.html
+++ b/part_6/index.html
@@ -13,8 +13,12 @@
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item" id="four">4</div>
-        <div class="item">5</div>
+        <div class="item" id="five">5</div>
     </div>
-    <div id="fontAnimation">font animation</div>
+    <div id="fontAnimation">font animation
+    </div>
+    <h1 class="media">Media Queries</h1>
+    <div class="zIndex" id="sampleOne">Z-Index sample one</div>
+    <div class="zIndex" id="sampleTwo"> Z-Index sample two</div>
 </body>
 </html>
