--- a/mini-project/index.html
+++ b/mini-project/index.html
@@ -22,7 +22,7 @@
     <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
-        <label for="check" style="color: white">
+        <label for="check" >
           <i class="fa-solid fa-bars"></i>
         </label>
       </div>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="btn_two">
-          <label for="check" style="color: grey">
+          <label for="check">
             <i class="fa-solid fa-xmark"></i>
           </label>
         </div>
